--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,25 @@ group 'edu.ml.tensorflow.java'
 version '1.0.0-SNAPSHOT'
 
 apply plugin: 'java'
-apply plugin: 'application'
-sourceCompatibility = 1.8
+apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
 
-mainClassName = "edu.ml.tensorflow.Main"
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.10.RELEASE")
+    }
+}
+
+jar {
+    baseName = 'gs-uploading-files'
+    version =  '0.1.0'
+}
 
 repositories {
     mavenCentral()
@@ -16,14 +31,10 @@ dependencies {
     compile group: 'org.tensorflow', name: 'libtensorflow', version: '1.6.0'
 
     // Please read the requirements for the GPU support here: https://www.tensorflow.org/install/install_java
-    //compile group: 'org.tensorflow', name: 'libtensorflow_jni_gpu', version: '1.6.0'
+    compile group: 'org.tensorflow', name: 'libtensorflow_jni_gpu', version: '1.6.0'
 
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
     compile 'org.apache.commons:commons-math3:3.2'
 
-    compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.2'
-    compile group: 'ch.qos.logback', name:'logback-classic', version: '1.0.9'
-    compile group: 'ch.qos.logback', name:'logback-core', version: '1.0.9'
-
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 }
