--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
+// These two plugin is needed for the Google AppEngine
+apply plugin: 'war'
+apply plugin: 'appengine'
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -14,6 +18,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.10.RELEASE")
+        classpath("com.google.appengine:gradle-appengine-plugin:1.9.59")
     }
 }
 
