Package name modified

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
 }
 
 jar {
-    baseName = 'gs-uploading-files'
+    baseName = 'java-tensorflow-service'
     version =  '0.1.0'
 }
 
